# chat-style-distillation

./: .gitignore  README.md  SKILL.md  build_backend.py  pyproject.toml
agents/: openai.yaml
assets/: evaluation-prompts.json  fake-sample.txt
chat_style_distillation/: __init__.py
references/: distillation.md  emotional-regulation.md  evaluation-rubric.md  example-discipline.md  long-term-memory.md  memory-companion.md  output-bundle.md  package-structure.md  privacy-layers.md  private-emotional-router.md  scene-classification.md  session-memory.schema.json  style-profile.schema.json  v3-pipeline.md  v4-pipeline.md  v5-pipeline.md  wechat-compatibility.md  wechat-export.md
scripts/: analyze_chat.py  anonymize_chat.py  build_style_profile.py  distill_chat_pipeline.py  evaluate_companion.py  run_pipeline.py
src/chat_style_distillation/: __init__.py  cli.py  distillers.py  evaluate.py  evidence.py  health.py  metrics.py  models.py  parsers.py  pipeline.py  privacy.py  profile.py  readiness.py  render.py  reply_simulator.py  scene.py
templates/: companion-mode.template.md  emotional-memory-profile.template.md  output-bundle.template.md  relationship-texture.template.md  scenario-response-guide.template.md  session-memory.template.md  style-card.template.md
tests/: test_v3_anonymizer.py  test_v3_parser.py  test_v3_pipeline.py  test_v4_evaluate_cli.py  test_v4_parser_health.py  test_v4_pipeline_distillers.py  test_v5_evidence_readiness.py  test_v5_parser_simulator.py  test_v5_pipeline_cli.py
