[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "chat-style-distillation"
version = "0.5.0"
description = "Local chat style distillation into private emotional companion bundles"
requires-python = ">=3.10"

[project.scripts]
chat-style-distill = "chat_style_distillation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
